status-bar fixed and add z-index
status-bar fixed and add z-index of it

--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -4,6 +4,8 @@
     width: 100%;
     justify-content: center;
     padding: 5px 3px;
+    background-color: white;
+    z-index: 2;
 }
 
 .status-bar__column {
